<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.CustomerSearchBranches">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/daysSpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="startTime"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonHourSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Filter by Hours" />

            <Spinner
                android:id="@+id/selectProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/selectProvince"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextTextPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/postalAddressHint"
                android:inputType="textPostalAddress"
                android:minHeight="48dp" />


            <Button
                android:id="@+id/buttonSearchAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchByAddress" />

            <ListView
                android:id="@+id/serviceListCustomer"
                android:layout_width="fill_parent"
                android:layout_height="150dp">

            </ListView>

            <Button
                android:id="@+id/branchServicesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Filter By Service" />

            <ListView
                android:id="@+id/branchList"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <Button
                android:id="@+id/selectBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Branch" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>